Panel view eddited, characters class eddited and fix some errors

--- a/WowLatinos/Views/Shared/_Layout.cshtml
+++ b/WowLatinos/Views/Shared/_Layout.cshtml
@@ -30,7 +30,8 @@
          <!-- <link rel="stylesheet" type="text/css" href="https://wowgaming.altervista.org/aowow/static/css/basic.css?26"/>
          <link rel="stylesheet" type="text/css" href="https://wowgaming.altervista.org/aowow/static/css/global.css?26"/>
 <link rel="stylesheet" type="text/css" href="https://wowgaming.altervista.org/aowow/static/css/aowow.css?26"/>
-         REVOLUTION SLIDER -->       
+         REVOLUTION SLIDER       
+        <link rel="stylesheet" type="text/css" href="http://wowmetal.es/application/themes/wowmetal/css/cms.css" />--> 
           <link rel="stylesheet" href="~/css/site.css" />
         <link href="~/plugins/slider.revolution.v4/css/settings.css" rel="stylesheet" type="text/css" />
     </environment>
