--- a/WowLatinos/Views/Home/Index.cshtml
+++ b/WowLatinos/Views/Home/Index.cshtml
@@ -213,7 +213,7 @@
     <!-- PARALLAX -->
 
 
-    <div id="blog">
+    <div id="blog" class="back-panel-wow">
 
         <!-- PAGE TITLE -->
         <header id="page-title">
