--- a/WowLatinos/Views/Shared/_Layout.cshtml
+++ b/WowLatinos/Views/Shared/_Layout.cshtml
@@ -222,23 +222,19 @@ else {
                             </div>
                         </form>
                         <hr />
-
-                        <div class="fb-login-button" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" scope="public_profile,email,manage_pages,publish_pages,publish_actions" data-use-continue-as="true" onlogin="FirstTimeLogin();"></div>
-                        <a href="#" class="btn-twitter fullwidth radius3"><i class="fa fa-twitter"></i> Conectar con Twitter</a>
-                        <a href="#" class="btn-google-plus fullwidth radius3"><i class="fa fa-google-plus"></i> Conectar con Google</a>
+    
+                        <div class="fb-login-button" style="margin-bottom: 5px;" data-max-rows="1" data-size="large" data-button-type="continue_with" data-show-faces="false" data-auto-logout-link="false" scope="public_profile,email,manage_pages,publish_pages,publish_actions" data-use-continue-as="true" onlogin="FirstTimeLogin();"></div>
                         <p class="bottom-create-account">
-                            <a href="/Account/Register"><strong>Registrarse</strong></a>
+                            <a href="/Account/Register"><strong></strong>Registrarse</a>
                         </p>
                     </div>
                     }
                 </div>
-
                 </div>
 
                   
             <!-- /SIGN IN -->
             <!-- CART MOBILE BUTTON -->
-
 
             <a class="pull-right" id="btn-mobile-quick-cart" href="#"><i class="fa fa-comments"></i></a>
             <!-- CART MOBILE BUTTON -->
@@ -271,7 +267,7 @@ else {
             <div class="navbar-collapse nav-main-collapse collapse pull-right">
                 <nav class="nav-main mega-menu">
                     <ul class="nav nav-pills nav-main scroll-menu" id="topMain">
-                        <li class="dropdown active">
+                        <li>
                             <a class="dropdown-toggle" href="/">
                                 Inicio
                             </a>
