--- a/WowLatinos/wwwroot/css/site.css
+++ b/WowLatinos/wwwroot/css/site.css
@@ -4,7 +4,7 @@
 }
 
 
-.color-panel, div.divider i.fa.fa-arrow-down, div.divider i.fa.fa-info-circle, div.divider i.fa.fa-gamepad, div.divider i.fa.fa-users, div.divider i.fa.fa-trophy, div.divider i.fa.fa-handshake-o, div.divider i.fa.fa-copy {
+.color-panel, div.divider i.fa.fa-arrow-down, div.divider i.fa.fa-info-circle, div.divider i.fa.fa-users, div.divider i.fa.fa-trophy, div.divider i.fa.fa-handshake-o, div.divider i.fa.fa-copy {
     background-color: #1e2336;
 }
 
@@ -1405,44 +1405,6 @@
 
 
 
-input[type="text"],
-input[type="number"],
-input[type="password"],
-textarea,
-input[type="email"] {
-    font-family: MuseoSans, Arial, Helvetica, Sans-serif;
-    font-size: 13px;
-    padding: 8px;
-    margin: 5px;
-    color: #323232;
-    text-align: left;
-    background: #efefef;
-    border: none;
-    overflow: hidden;
-    -webkit-box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.4);
-    -moz-box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.4);
-    box-shadow: inset 1px 1px 5px 0px rgba(0,0,0,0.4);
-    opacity: 1;
-    -webkit-transition: all 300ms;
-    -moz-transition: all 300ms;
-    -o-transition: all 300ms;
-    -ms-transition: all 300ms;
-    transition: all 300ms;
-    height: 34px;
-}
-
-    input[type="text"]:focus,
-    input[type="password"]:focus,
-    input[type="number"]:focus,
-    input[type="email"]:focus,
-    textarea:focus,
-    select:focus {
-        opacity: 2;
-        -webkit-box-shadow: inset 3px 3px 5px 0px cadetblue;
-        -moz-box-shadow: inset 3px 3px 5px 0px cadetblue;
-        box-shadow: inset 3px 3px 5px 0px cadetblue;
-    }
-
 .q7, .q7 a {
     color: #e5cc80;
     font-size: 14px;
@@ -1452,5 +1414,40 @@ input[type="email"] {
     color: #ff8000;
     font-size: 14px;
 }
+
+.button-red{
+    width:130px;
+    height:24px;
+    background: url('https://raw.githubusercontent.com/Seejayz/WorldofwarcraftArmory/master/images/button-red.gif') 0px 0px;
+}
+
+.button-red:hover{
+    left: 0px;
+    width: 130px;
+    background: url('https://raw.githubusercontent.com/Seejayz/WorldofwarcraftArmory/master/images/button-red.gif') 0px 25px;
+}
+@font-face {
+    font-family: wowFont;
+    src: url(../fonts/Friz-Quadrata-Std-Medium.otf);
+}
+
+.insi{
+    background: url('../images/inputs/input_1.jpg') 0px 0px!important;
+    
+    -webkit-background-size: cover!important;
+    -moz-background-size: cover!important;
+    -o-background-size: cover!important;
+    background-size: contain!important;
+border: none!important;
+    height: 40px!important;
+    width: 300px!important;
+    color:#FFFFFF !important;
+    padding-bottom: 5px!important;
+    font-family: wowFont !important;
+
+    
+  }
+
+
 
 
